force-app/main/default/objects/Event__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <label>Event Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Event</relationshipLabel>
    <relationshipName>Event</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>