force-app/main/default/objects/Event__c/fields/Location_verified__c.field-meta.xml
<CustomField>
    <fullName>Location_verified__c</fullName>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location verified?</label>
    <type>Checkbox</type>
</CustomField>