force-app/main/default/objects/Event__c/fields/Number_of_People_Attending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People_Attending__c</fullName>
    <label>Number of People Attending</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>