force-app/main/default/objects/Event__c/validationRules/check_recurrency.validationRule-meta.xml
<ValidationRule>
    <fullName>check_recurrency</fullName>
    <active>true</active>
    <errorConditionFormula>Recurring__c =true &amp;&amp;  
 ISBLANK(TEXT ( Frequency__c ))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Please spesify frequency</errorMessage>
</ValidationRule>