force-app/main/default/objects/Event__c/validationRules/End_date_time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK( End_Date__c )),
 End_Date__c   &lt;   Start_Date__c 
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date should not be before start date</errorMessage>
</ValidationRule>