force-app/main/default/objects/Event__c/validationRules/Event_type_in_person.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_type_in_person</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Event_Type__c ,&apos;In-person&apos;),
 ISBLANK( Location__c ) 
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>For in-person events, please select location.</errorMessage>
</ValidationRule>