force-app/main/default/objects/Event__c/validationRules/Event_Type_Virtual.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_Virtual</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Event_Type__c, &apos;Virtual&apos;),
NOT( ISBLANK( Location__c ) )
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>For Virtual events, please leave the Location field empty.</errorMessage>
</ValidationRule>